--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
+  "config": {
+    "ionic_sass": "./config/sass.config.js"
+  },
   "scripts": {
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
@@ -20,15 +23,19 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "^1.1.7",
+    "@types/google-maps": "^3.2.0",
+    "@types/leaflet": "^1.0.55",
     "ionic-angular": "2.0.1",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
+    "leaflet": "^1.0.3",
+    "moment": "^2.17.1",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.0",
+    "@ionic/app-scripts": "^1.1.4",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
